# longevity-protocol-validator

./: .gitignore  README.md  docker-compose.yml
.agent/rules/: commit.md
backend/: pyproject.toml  requirements.txt
backend/app/: agent.py  enhanced_retrieval.py  ingest_pdf.py  ingestion.py  main.py  pdf_fetcher.py  rag.py  retrieval.py  text_processor.py  tools.py  vision.py
backend/app/api/: reports.py
backend/app/core/: config.py  db.py  dependencies.py  exceptions.py  logging.py  rate_limit.py
backend/app/models/: report.py
backend/app/schemas/: __init__.py  events.py  paper_analysis.py  report.py  retrieval.py
backend/app/services/: cache.py  fulltext.py  ingestion.py  llm.py  paper_analysis.py  pdf_export.py  report.py  retrieval.py
backend/app/services/retrieval/: __init__.py  fulltext_enrichment.py  llm_filter.py  normalizers.py  pipeline.py  query_optimizer.py  ranking.py  types.py
backend/app/services/sources/: __init__.py  base.py  clinicaltrials.py  crossref.py  europe_pmc.py  openalex.py  pubmed.py
backend/app/tools/: __init__.py  pdf_processing.py  research.py  text_processing.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_config.py  test_dependencies.py  test_exceptions.py  test_llm.py  test_logging.py  test_retrieval.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  styles.css  styles.scss
frontend/src/app/: app.component.html  app.component.ts  app.config.ts
frontend/src/environments/: environment.prod.ts
(+33 files in other folders)
